# Wire-cell-gen-stdpar

./: _setup_standalone_init_pm_stdpar_nvc.sh  simple_setup_standalone_pm_stdpar_nvc.sh  wc_nc_cuda.sh
.cmake-stdpar-cuda/: CMakeLists.txt
.cmake-stdpar-cuda-nvc/: CMakeLists.txt
cfg/pgrapher/common/sim/: nodes.jsonnet
example/: sim.fcl  wct-sim-check.jsonnet  wct-sim.jsonnet
inc/WireCellGenStdpar/: AtomicWrapper.h  BinnedDiffusion_transform.h  DepoTransform.h  GaussianDiffusion.h  GdData.h  ImpactData.h  ImpactTransform.h  StdparArray.h  StdparArray_cuda.h  StdparArray_fftw.h  counting_iter.h
src/: AtomicWrapper.cxx  BinnedDiffusion_transform.cxx  DepoTransform.cxx  GaussianDiffusion.cxx  ImpactData.cxx  ImpactTransform.cxx  StdparArray.cxx  my_counting_iter.h
